# imei-checker

./: .env-example  .gitignore  compose.yaml
backend/: .env-example  Dockerfile  alembic.ini  pyproject.toml  settings.py
backend/api/: app.py  dependencies.py  security.py
backend/api/dto/: auth.py  authorization.py  base.py  imei_checker.py
backend/api/routes/: auth.py  authorization.py
backend/api/routes/imei_checker/: base.py  sandbox.py  v1.py
backend/application/interactors/imei_checker_client/: api.py  base.py  sandbox.py  settings.py
backend/application/services/imei_checker/: api_based.py  base.py  sandbox.py
backend/application/services/repository/: base.py  users.py  whitelist.py
backend/data/db/: settings.py
backend/data/db/migration/: env.py
backend/data/db/models/: __init__.py  base.py  user.py  whitelist.py
backend/tests/db_based/: conftest.py
backend/tests/interactors/: conftest.py  imei_checker_test.py
backend/tests/utils/: jwt_test.py
backend/utils/: constants.py  exceptions.py  jwt_utils.py  settings.py
backend/utils/configuration/: db.py  logging.py
bot/: .env-example  pyproject.toml  settings.py
bot/application/dto/: auth.py
bot/application/services/: registration.py  token.py
bot/data/cache/: base.py  redis.py
bot/data/cache_repository/: base.py  redis.py
bot/presentation/: dependencies.py  dp.py
bot/presentation/routes/: imei_checker.py  start.py
bot/services/api/: auth.py  base.py  info_reciever.py
bot/services/dto/: auth.py
bot/tests/data/: conftest.py  redis_cache_test.py
bot/utils/: messages.py
(+12 files in other folders)
