[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["aleksandr.rybin <aleksandr.rybin@glowbyteconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
aiohttp = "^3.11.12"
redis = "^5.2.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
